# tesseracs-chat

./: .dockerignore  .env  .gitignore  Dockerfile  build.js  build_all_images.ps1  check_database.py  clear_sessions.py  create_dockerfiles.ps1  docker-compose.yml  download_and_install_images.ps1  fetch_assets.py  generate_secret_key.py  package-lock.json  package.json  postcss.config.js  project_content.txt  pyproject.toml  run_app.ps1  run_tests.sh  tailwind.config.js  temp.js  temp.py  tesseracs_chat.db  testing_worker_architecture.py  update_schema.py  watcher.py  write_project_content_to_file.py
app/: auth.py  config.py  database.py  docker_utils.py  docker_worker.py  email_utils.py  encryption_utils.py  llm.py  llm_worker.py  main.py  models.py  project_utils.py  state.py  system_prompt.txt  utils.py
app/static/: _sidebar.html  chat-session.html  index.html  input.css  languages.json  login.html  script.js  session-choice.html  settings.html  style.css  temp.css  temp.js
app/static/email_templates/: password_reset_email.html  registration_email.html
app/static/js/: app-ui.js  project-explorer.js  session-manager.js  settings.js  sidebar-toggle.js
dockerfiles/dotnet/: Dockerfile
dockerfiles/gcc/: Dockerfile
dockerfiles/go/: Dockerfile
dockerfiles/java/: Dockerfile
dockerfiles/latex/: Dockerfile
dockerfiles/node/: Dockerfile
dockerfiles/python/: Dockerfile
dockerfiles/rust/: Dockerfile
jobs/requests/: 54e0237d-63dd-4125-90d9-34818f17f8a7-web-1758183300755-2zkmt-1.json  54e0237d-63dd-4125-90d9-34818f17f8a7-web-1758183920003-944ue-1.json  9f8c3c7b-cfa0-428d-8232-151bfda7a869-web-1758182149582-hdtro-1.json  9f8c3c7b-cfa0-428d-8232-151bfda7a869-web-1758182826202-l0hjn-1.json
jobs/responses/: 156765f4-b485-419a-974b-fcfc7f1003a9-web-1758179537295-9ljpt-1.json
tests/: test_coding.py  test_docker_utils.py
